[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-cmc"
version = "0.1.0"
description = "Python SDK for the coinmarketcap.com API."
readme = "README.md"
authors = [{ name = "Jason Byteforgia"}]
license = { file="LICENSE" }
keywords = ["cryptocurrency", "API", "coinmarketcap", "BTC", "Bitcoin", "LTC", "Litecoin", "XRP", "Ripple", "ETH", "Ethereum"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {
    "Bug Reports": "https://github.com/barnumbirr/coinmarketcap/issues",
}

[project.optional-dependencies]
# Define any optional dependencies here if needed

[tool.setuptools]
packages = ["coinmarketcap"]
install_requires = [
    "requests>=2.18.4",
    "requests_cache>=0.4.13"
]
